Update color scehme. Fix element alignments

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,8 +1,100 @@
+/* General */
+body{
+    background: white;
+}
+section{
+    min-height: 70vh;
+    width: 95%;
+    position: relative;
+    margin: 20px auto;
+    display: block;
+    z-index: 0;
+    background: #FFF5E6;
+    /* background: #FFEBCC; */
+}
+
+/* Section Specific */
+#about{
+    margin-top: 40px;
+}
+#getcode{
+}
+#faqs{
+}
+#examples{
+}
+#contribute{
+    margin-bottom: 0;
+}
+#publications{
+    margin: 40px auto 0;
+}
+.column1{
+    float: left;
+    width: 70%;
+}
+.column2{
+    float: left;
+    width: 30%;
+}
+.clear{
+    clear: both;
+}
+
+/* Footer */
+#site-footer{
+    padding: 10px 20px;
+    background: #666666;
+    color: white;
+}
+#site-footer>div>ul{
+    list-style: none;
+}
+
+/* Headings and Paragraphs */
+h2{
+    padding: 10px;
+    margin: 0;
+    color: #FF3333;
+}
+h4 {
+    padding-left: 20px;
+    color: #FF3333;
+}
+p {
+    padding: 0 20px;
+    color: #373737;
+}
+.title{
+    background: white;
+    padding-top: 1vh;
+    padding-left: 2vw;
+}
+.substance{
+    padding: 1vh 2vw;
+}
+.question{
+    padding: 0 10px;
+    color: #CC0000;
+}
+.citation{
+    font-family: monospace;
+}
+.white-text{
+    color: white;
+    text-decoration: none;
+}
+.special-link{
+    color: #FF6666;
+    text-decoration: none;
+}
+
+/* Nav Menu */
 nav{
     position: fixed;
     top: 0;
     left: 0;
-    background: #990000;
+    background: #FF3333;
     height: 40px;
     width: 100%;
     z-index: 1;
@@ -27,67 +119,20 @@ nav > ul > li > a{
     transition: all 0.3s ease-in-out;
 }
 nav > ul > li > a:hover {
-    color: #FFCC00;
+    color: #373737;
 }
 nav > ul > li.active > a{
-    color: #FFCC00;
-    border-bottom:3px solid #FFCC00;
+    color: #373737;
+    border-bottom:3px solid #373737;
 }
-section{
-    min-height: 70vh;
-    position: relative;
-    margin: 0;
-    padding: 10px 0;
-    display: block;
-    z-index: 0;
+.slicknav_menu{
+    display: none;
 }
-#about{
-    background:#FFF5E6;
-    top: 40px;
-}
-#getcode{
-    background: #FFEBCC;
-}
-#faqs{
-    background: #FFF5E6;
-}
-#examples{
-    background: #FFEBCC;
-}
-#contribute{
-    background: #FFF5E6;
-}
-#publications{
-    background: #FFEBCC;
-    top: 40px;
-    height: auto;
-}
-h2{
-    padding: 10px;
-    margin: 0;
-    color: #CC0000;
-}
-h4 {
-    padding-left: 20px;
-    color: #CC0000;
-}
-p {
-    padding: 0 20px;
-}
-.question{
-    padding: 0 10px;
-    color: #CC0000;
-}
-.column1{
-    float: left;
-    width: 60%;
-}
-.column2{
-    float: left;
-    width: 30%;
-}
-#contribute:after{
-    content: "";
-    display: table;
-    clear: both;
+@media screen and (max-width: 40em) {
+    .js #navMenu{
+        display: none;
+    }
+    .js .slicknav_menu {
+        display: block;
+    }
 }
